--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,23 +4,178 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: black;
+  color: white;
+  overflow-x: hidden;
 }
 
 a {
   color: inherit;
-  text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+h1,
+h2, .subtitle {
+  z-index: 100;
+}
+
+.subtitle {
+  font-size: 20px;
+  margin: 15px;
+}
+
+.container-sections {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  z-index: 10;
+}
+
+.container-sections section {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.container-sections section svg:hover {
+  opacity: 0.5;
+}
+
+
+
+section.light {
+  background-color: #f5f5f5;
+  color: #333;
+  text-align: center;
+}
+
+section.dark {
+  background-color: #111;
+  color: #f5f5f5;
+  text-align: center;
+}
+
+section.custom {
+  background-color: #111;
+  color: #333;
+  text-align: center;
+}
+
+section.custom-2 {
+  background-color: #111;
+  color: #333;
+  text-align: center;
+}
+
+section.custom-3 {
+  background-color: #f5f5f5;
+  color: #333;
+  text-align: center;
+}
+
+section.custom svg path {
+  stroke: #00ff9f;
+}
+
+section.custom svg path:nth-of-type(1) {
+  fill: #d600ff !important;
+  stroke: orange;
+}
+
+section.custom svg path:nth-of-type(2) {
+  fill: #00b8ff !important;
+  stroke: orange;
+}
+
+section.custom svg path:nth-of-type(3) {
+  fill: yellow !important;
+  stroke: orange;
+}
+
+section.custom svg path:nth-of-type(4) {
+  fill: #001eff !important;
+  stroke: orange;
+}
+
+section.custom svg path:nth-of-type(5) {
+  fill: #bd00ff !important;
+}
+
+section.custom-2 svg path {
+  stroke: #00ff9f !important;
+  fill: #001eff !important;
+}
+
+
+section.custom-3 svg path {
+  fill: pink !important;
+}
+
+
+#cyberEl-Master {
+  top: 200px;
+  position: fixed;
+  z-index: 1;
+  animation: spin 94s linear infinite, cyber-move .001s infinite;
+  -webkit-animation: spin 94s linear infinite, cyber-move .001s infinite;
+}
+
+#cyberEl-Master path {
+  stroke: #00ff9f !important;
+  opacity: 0.8;
+}
+
+#cyberEl-Master path:nth-of-type(30) {
+  stroke: #bd00ff !important;
+  opacity: 0.9;
+}
+
+#cyberEl-Master path:nth-of-type(20) {
+  stroke: yellow !important;
+  opacity: 0.6;
+}
+
+
+
+@keyframes cyber-move {
+
+  0%,
+  100% {
+    opacity: 0.5;
   }
-  body {
-    color: white;
-    background: black;
+
+  25% {
+    opacity: 0.6;
+  }
+
+  50% {
+    opacity: 0.6;
+  }
+
+  75% {
+    opacity: 0.5;
+  }
+}
+
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
